!-----------------------------------------------------------------------------------------------------------------!

>2014-11-16  Jonathan Hall   <jhall@futuresouth.us>

 &  problem fixes

 - Corrected a potential DoS vulnerability.



>_END_ 2014-11-16 J. Hall

!-----------------------------------------------------------------------------------------------------------------!

>2014-11-15  Jonathan Hall   <jhall@futuresouth.us>

 & libwebsock 1.0.8

 - The changes made in this revision are addressing code cleanup and logic flow. libwebsock will no longer be
 initiated with a seperate function to specify flags to be passed on to libevent.

 - The goal is to develop more control of the framing protocol and the data frames, allowing for the possibility
 of actually streaming content through the websocket for example, while also allowing the library to be easily
 integrated in to existing code that is already using libevent.

 -Currently, libwebsock only supports the sending of unfragmented messages that already have the FIN bit set. The
 goal is to allow actual streaming through the socket and to not set the FIN bit until the stream is completed.
 A good use-case for this would be video or audio streaming and multiplexing.

 - The version and revision have been changed. libwebsocket 1.0 provided very basic functionality, as does the
 current version. Version 2.0 will have a lot of advancements and features making it significantly more powerful,
 yet still extremely simple to implement.

 * API: libwebsock is now initialized with two arguments: an optional event base and optional flags. Either
 may be set to NULL. When set to NULL, libwebsock will use its own libevent base and will default to fragmented
 Text data frames. The arguments are added for expansion to allow libwebsock to be tied to a custom libevent
 implementation. This is still planned and not functional yet. I need to build it appropriately so that the context