@@ -8,3 +8,5 @@ so libwebsock ends up not getting linked to properly. This problem appears to be
 > Build streaming functionalities and fragmented data streams functions. (video / voice streaming?)
 
 > Allow option for setting max frame payload length to be accepted (i.e. correct overflow in libwebsock_handle_recv)
+
+> Add API call to terminate the websocket session
