@@ -27,5 +27,6 @@ int libwebsock_default_onclose_callback(libwebsock_client_state *state);
 int libwebsock_default_onopen_callback(libwebsock_client_state *state);
 int libwebsock_default_onmessage_callback(libwebsock_client_state *state, libwebsock_message *msg);
 int libwebsock_default_control_callback(libwebsock_client_state *state, libwebsock_frame *ctl_frame);
+int libwebsock_default_onframetoolarge_callback(libwebsock_client_state *state, libwebsock_frame *frame);
 
 #endif /* DEFAULT_CALLBACKS_H_ */
